# smbpasswd-web-light

./: .editorconfig  .eslintrc.js  .gitignore  Dockerfile  README.md  SECURITY.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: security-bug-report.md
.github/workflows/: bandit.yml  codeql.yml  docker-publish.yml  eslint.yml  hadolint.yml  pylint.yml  python-app.yml  scorecard.yml  sonarcloud.yml  trivy.yml
docker/: entrypoint.sh  gen-token
src/: app.py  pyproject.toml
src/static/: app.css  app.js
src/templates/: base.html  change_passwd.html  index.html
